// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scope getFragmentScope() throws for required variables with no argument or default 1`] = `
"Encountered 1 error(s):
- No value found for required argument 'size: Int!' on fragment '<name>'.
  
  Source: (unknown)
  "
`;

exports[`scope getFragmentScope() throws if an argument is provided for an import definition 1`] = `
"Encountered 1 error(s):
- Unexpected argument 'size' supplied to fragment '<name>'. @arguments may only be provided for variables defined in the fragment's @argumentDefinitions.
  
  Source: (unknown)
  "
`;
